# studies

./: .gitignore  20240618sb160503-logical-bitwise-operations  20240618sb160503-logical-bitwise-operations.cpp  202407140102-types-of-variables.cpp  202407140103-climits  202407140103-climits.cpp  202407140104-initialization.cpp  202407140105-dec-oct-hex  202407140105-dec-oct-hex.cpp  20240720pr350-recursion.cpp  20240720pr351-multiple-recursion.cpp  20240721ce02-correct-input.cpp  20240721yt01-recursive-rabbit.cpp  20240721yt04-rec-rabb-all-options.cpp  20240721yt3-recursive-bonny.cpp  20240722sb190101-Introduction-to-opening-files.cpp  20240722sb190102-purse.cpp  20240723sb190301-reading-binary-files.cpp  20240724sb190302-method-seekg.cpp  20240725sb190401-reading-from-a-data-array-file.cpp  20240726sb190402-vec-reading-from-a-data-array-file.cpp  20240727sb190502-text-file-viewer.cpp  20240802-massiv-of-char.cpp  20240802pr01-char.cpp  20240804sb190503-date-format.cpp  20240806sb190504-detector-png-files.cpp  20240811sb190505-whirligig.cpp  20240815sb2001-Intro-to-file-recording.cpp  20240815sb2002-recording-different-types-of-data.cpp  20240816sb2003-writing-binary-files-char.cpp  20240816sb2003-writing-binary-files.cpp  20240816sb200401-writing-data-arrays.cpp  20240816sb200401-writing-data-vector.cpp  20240817sb200501-date-format  20240817sb200501-date-format.cpp  20240817sb200501-leap-year.cpp  20240818-double-vector.cpp  20240820-string-comparison-and-vector-operation.cpp  20240824sb200504-automated-teller-machine.cpp  20240824sb2101-atm-simulation.cpp  (+54 more)
20240728ce190502-text-file-viewer-via-fstream_get/: main  main.cpp
20241225ce230603-carriages/: 6 1 Операторы и объявления.txt
20250121sb250300-circuit/: CMakeLists.txt
20250121sb250300-circuit/src/: CMakeLists.txt  main.cpp  math.cpp
20250122cmake01/src/: CMakeLists.txt  main.cpp
20250123sb250300-circuit/: CMakeLists.txt
20250205sb260401-audioplayer/: CMakeLists.txt
20250205sb260401-audioplayer/src/: CMakeLists.txt  cci.cpp  main.cpp  player.cpp  track.cpp
20250413-recursive-tree/: main.cpp  tree.h
20250413-trees/: 20250424vas-p-452-tree.cpp  chatGPT  chatGPT.cpp  main.cpp  tree.h  tree2  tree2.cpp
20250415-singly-linked-list/: StructuresData.hpp  main.cpp
20250504ai270403-elven-village-vec/: CMakeLists.txt  Hello Created forest.txt
20250504ai270403-elven-village-vec/src/: CMakeLists.txt  branch.cpp  forest.cpp  main.cpp
20250525sb2801-multithreading/: 01  01.cpp  02-detach  02-detach.cpp  02-multiple-parallel  02-multiple-parallel.cpp  03-mutex  03-mutex.cpp
20250527simpleCode01-multithreading/: ceProgressBar  ceProgressBar.cpp  sc01- thread  sc01- thread.cpp  sc02threads-with-parameters  sc02threads-with-parameters.cpp  sc03references.cpp  sc04lambda.cpp  sc05class-methods  sc05class-methods.cpp  sc05class-methods1.cpp  sc06mutex.cpp  sc07lock-guard-mutex.cpp  sc08deadlock  sc08deadlock.cpp  sc09recursive-mutex.cpp  sc10unique-lock-mutex  sc10unique-lock-mutex.cpp  sc10unique-lock-mutex1.cpp
20250612ai2801-swim/: main.cpp
20250615aiCmakeTest/: CMakeLists.txt
20250622ai280402railwayStation/: condition_variable_notify_all.ai  main.cpp  main1  main1.cpp  main11  main11.cpp  main3  main3.cpp  main4  main4.cpp  main7  main7.cpp  main8  main8.cpp  main9  notify_all  notify_all.cpp  test-1-D  test-1-D.cpp  wait  wait.cpp
20250715ai280403restaurant-kitchen/: main.2.cpp  main1.cpp  main3  main3.cpp  main4  main4.cpp  main5  main6  main6.cpp  main7  main7.cpp  main_stop  main_stop.cpp  main_stop2  main_stop2.cpp  queue  queue.ai  queue.cpp
20250920-exception/: yandex-exception.cpp  yandex-vector  yandex-vector.cpp
data/: Tom_Hanks.txt  bank.txt  bank2.txt  bank3.txt  buildings2004.txt  text2001-2.txt  text2001.txt  text2002.txt
functionTemplate/: CMakeLists.txt
functionTemplate/src/: CMakeLists.txt  cci.cpp  main.cpp  train.cpp
oop-simpleCode/: sc102  sc102.cpp  sc103virtual  sc103virtual.cpp  sc104abstract_class  sc104abstract_class.cpp  sc105virtual_destructor  sc105virtual_destructor.cpp  sc113interface.cpp  sc114diamondInheritance  sc114diamondInheritance.cpp  sc114virtualInheritance  sc114virtualInheritance.cpp  sc130smart_pointers  sc130smart_pointers.cpp  sc131_1auto_ptr.cpp  sc131_2unique_ptr  sc131_2unique_ptr.cpp  sc131_3pdshared_ptr  sc131_3pdshared_ptr.cpp  sc131_3shared_ptr  sc131_3shared_ptr.cpp  sc131_4pd_weak_ptr.cpp  sc131_4weak_ptr  sc131_5pdweak_ptr  sc131_5pdweak_ptr.cpp  sc131_5weak_ptr  sc131_6pd_online_store.cpp  sc131_7observer  sc131_7observer.cpp  sc82.1copy_constructor.cpp  sc82.2copy_constructor_din  sc82.2copy_constructor_din.cpp  sc82copy_constructor  sc82copy_constructor_din  sc83assignment_operator  sc83assignment_operator.cpp
qt0103creatingQtProject260102metanit/: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
qt0104creatingQtProject260102metanit/: README.md  main.cpp  mainwindow.ui  qt0104creatingQtProject260102metanit.pro
qt0201simpleWidgets260104metanut/: main.cpp
qt0201simpleWidgetsWithQmake260104metanit/: README.md  main.cpp
qt0202simpleWidgetsWithCmake260125metanit/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/: README.md
qt_Sergey_Budeikin/0007_Substring_extraction/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/0017_Leap_Year_Definition/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/0020_Working_with_Days_of_the_Week/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/0036_File_and_Group_Owner/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/0037_File_Last_Read_and_Modified_Time/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/0042_Creating_a_Simple_QWidget_Window/: CMakeLists.txt  README.md  main.cpp
qt_Sergey_Budeikin/0043_Cursor/: CMakeLists.txt  README.md  cursors.cpp  cursors.h  main.cpp  resources.qrc
qt_Sergey_Budeikin/0061_Disabling_Signals/: CMakeLists.txt  README.md  disconnect.cpp  disconnect.h  main.cpp
sort/: 20240427ce12050201-bubble-sort-simple.cpp  20240428ce12050201-bubble-sort-improved.cpp  20240505ce12050201-bubble-Sort-fun.cpp
(+255 files in other folders)
